# hatch-rs

./: .copier-answers.yaml  .copier-answers.yml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
hatch_rs/: __init__.py  hooks.py  plugin.py  structs.py
hatch_rs/tests/: test_all.py  test_projects.py  test_structs.py
hatch_rs/tests/test_project_basic/: Cargo.toml  pyproject.toml
hatch_rs/tests/test_project_basic/src/: lib.rs
hatch_rs/tests/test_project_c_abi_validation_failure/: Cargo.toml  pyproject.toml
hatch_rs/tests/test_project_c_abi_validation_failure/src/: lib.rs
hatch_rs/tests/test_project_cargo_controls/: Cargo.toml  pyproject.toml
hatch_rs/tests/test_project_cargo_controls/cargo_controls_project/: __init__.py
hatch_rs/tests/test_project_cargo_controls/rust/: Cargo.toml
hatch_rs/tests/test_project_cargo_controls/rust/src/: lib.rs
hatch_rs/tests/test_project_generated_files/: pyproject.toml
hatch_rs/tests/test_project_generated_files/generated_files_project/: __init__.py
hatch_rs/tests/test_project_generated_files/scripts/: write_generated_files.py
hatch_rs/tests/test_project_python_extension_c_abi_library/: Cargo.toml  pyproject.toml
hatch_rs/tests/test_project_python_extension_c_abi_library/c_abi_bundle_project/: __init__.py
hatch_rs/tests/test_project_python_extension_c_abi_library/c_abi_bundle_project/include/: c_abi_library.h
hatch_rs/tests/test_project_python_extension_c_abi_library/rust/: Cargo.toml
hatch_rs/tests/test_project_python_extension_c_abi_library/rust/src/: lib.rs
hatch_rs/tests/test_project_python_extension_c_abi_library/scripts/: validate_c_abi.py
hatch_rs/tests/test_project_python_extension_c_abi_library/src/: lib.rs
