[package]
name = "project_py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "project"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true
