[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "hatch-rs-test-project-basic"
description = "Basic test project for hatch-rs"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "hatchling>=1.20",
    "hatch-rs",
]

[tool.hatch.build]
artifacts = [
    "*.so",
    "*.dll",
    "*.dylib",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
include = [
    "/basic_project",
]
exclude = []

[tool.hatch.build.targets.wheel]
include = [
    "/basic_project",
]
exclude = [
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build.hooks.hatch-rs]
toolchain = "cargo"
libraries = [
    "/basic_project/extension.so",
]
skip-if-exists = [

]
dependencies = [
    "hatch-rs",
]


[tool.hatch.build.hooks.hatch-rs.build-kwargs]
path = "rs"
build_cmd = "build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "basic_project/tests"
