[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "hatch-rs-test-project-cargo-controls"
description = "Cargo controls test project for hatch-rs"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "hatchling>=1.20",
    "hatch-rs",
]

[tool.hatch.build]
artifacts = [
    "cargo_controls_project/*.dll",
    "cargo_controls_project/*.dylib",
    "cargo_controls_project/*.so",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["cargo_controls_project"]

[tool.hatch.build.targets.wheel]
packages = ["cargo_controls_project"]

[tool.hatch.build.hooks.hatch-rs]
verbose = true
path = "."
module = "cargo_controls_project"
manifest = "rust/Cargo.toml"
target-dir = "isolated"
features = ["ffi"]
no-default-features = true
cargo-args = ["--color", "never"]
rustc-args = ["--crate-type", "cdylib"]

[tool.hatch.build.hooks.hatch-rs.env]
CARGO_TERM_COLOR = "never"
HATCH_RS_CARGO_CONTROLS_TEST = "enabled"
