[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "hatch-rs-test-project-python-extension-c-abi-library"
description = "Python extension plus C ABI library test project for hatch-rs"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "hatchling>=1.20",
    "hatch-rs",
]

[tool.hatch.build]
artifacts = [
    "c_abi_bundle_project/*.dll",
    "c_abi_bundle_project/*.dylib",
    "c_abi_bundle_project/*.pyd",
    "c_abi_bundle_project/*.so",
    "c_abi_bundle_project/include/*.h",
    "c_abi_bundle_project/lib/*.dll",
    "c_abi_bundle_project/lib/*.dylib",
    "c_abi_bundle_project/lib/*.json",
    "c_abi_bundle_project/lib/*.lib",
    "c_abi_bundle_project/lib/*.so",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["c_abi_bundle_project"]

[tool.hatch.build.targets.wheel]
packages = ["c_abi_bundle_project"]

[tool.hatch.build.hooks.hatch-rs]
verbose = true
path = "."
module = "c_abi_bundle_project"
target-dir = "isolated"
artifact-manifest = true

[[tool.hatch.build.hooks.hatch-rs.artifacts]]
name = "c_abi_bundle_extension"
manifest = "Cargo.toml"
destination = "c_abi_bundle_project/{python_extension_name}"

[[tool.hatch.build.hooks.hatch-rs.artifacts]]
name = "c_abi_library"
manifest = "rust/Cargo.toml"
destination = "c_abi_bundle_project/lib/{shared_library}"
expected-symbols = ["c_abi_library_answer", "c_abi_library_abi_version"]
expected-headers = ["c_abi_bundle_project/include/c_abi_library.h"]
expected-abi-strings = ["C_ABI_LIBRARY_ABI_VERSION", "c_abi_library_abi_version"]
validate = true
include-import-lib = true

[[tool.hatch.build.hooks.hatch-rs.artifacts.validation-commands]]
command = ["python", "scripts/validate_c_abi.py", "{destination}", "{header}"]
